Fix: Improve visibility of Social Icons block appender in dark themes

--- a/packages/block-library/src/social-links/editor.scss
+++ b/packages/block-library/src/social-links/editor.scss
@@ -102,9 +102,14 @@
 	position: static; // display inline.
 
 	.block-editor-button-block-appender {
+		background: $gray-900;
 		height: 1.5em;
 		width: 1.5em;
 		font-size: inherit;
 		padding: 0;
+
+		svg {
+			color: $white;
+		}
 	}
 }
